--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "2"
 services:
-  go-boilerplate:
-    image: go-boilerplate
+  gluttony:
+    image: gluttony
     build: .
     volumes:
-      - ./build/go-boilerplate:/usr/bin/go-boilerplate
-      - ./config.json:/etc/go-boilerplate/config.json
+      - ./build/gluttony:/usr/bin/gluttony
+      - ./config.json:/etc/gluttony/config.json
     command: >-
-      /usr/bin/go-boilerplate
-      --config /etc/go-boilerplate/config.json
+      /usr/bin/gluttony
+      --config /etc/gluttony/config.json
       --debug
     ports: []
     links: []
