--- a/config.json
+++ b/config.json
@@ -36,12 +36,12 @@
                         "Batch": {
                             "FlushInterval": "5s",
                             "Points": {
-                                "Precision": "ms",
+                                "Precision": "ns",
                                 "Database": "gluttony",
                                 "RetentionPolicy": "autogen",
                                 "WriteConsistency": "any"
                             },
-                            "Size": 32
+                            "Size": 2048
                         },
                         "Point": {
                             "Name": "ticker",
@@ -58,7 +58,7 @@
                                 "currencyPair"
                             ],
                             "Timestamp": "timestamp",
-                            "TimestampPrecision": "ns"
+                            "TimestampPrecision": "nanosecond"
                         }
                     }
                 }
